# smh

./: .env  .gitignore  Cargo.toml
migrations/2024-03-11-230632_users/: up.sql
migrations/2024-03-14-065738_posts/: up.sql
src/: api.rs  home.rs  login.rs  main.rs  posts.rs  schema.rs
static/: alertsystem.js  style.css
templates/: home.html.hbs  index.html.hbs  login.html.hbs  post.html.hbs
