[package]
name = "smh"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
chrono = "0.4.35"
mail-send = "0.4.7"
serde_json = "1.0.114"
serde =  { version = "1.0.197", features = ["derive"] }
